# trace

./: CMakeLists.txt
src/: .clang-tidy
src/trace/: CMakeLists.txt  geometry.hpp  main.cpp  matrix.hpp  sdl.hpp  vector.hpp  view.hpp  world.hpp
